Change ensure alert banners don't overlap submenus on view-show.

--- a/gui/slick/css/style.css
+++ b/gui/slick/css/style.css
@@ -4750,6 +4750,7 @@ pre{
 
 .alert{
 	padding:10px;
+	clear: both;
 	text-align:center
 }
 
